src/app/components/Home/title-section/title-section.component.css
#header-div {
    text-align:center;
    background-color: #000107;
    background-image: url('../../../../assets/giphy.GIF');
    width: 100vw;
    height: calc(100vh - 50px);
    padding: 0;
    margin: 0;
    background-size: cover;
}

#header-main-block {
    color: white;
    padding: 37vh 0 1vh 0;
    margin: 0;
    font-size: 10vmin;
    font-family: 'Raleway', sans-serif;
}

#header-subtitle-block {
    color: white;
    padding: 0;
    margin: 0;
    font-size: 4.2vmin;
    font-family: 'Raleway', sans-serif;
    padding-bottom: 2vh;
}

.image-cropper {
    width: 30vmin;
    height: 30vmin;
    margin: 4% 31%;
    border: 3px solid white;
    text-align: center;
    border-radius: 100%;
    background-size: cover;
    background-image: url('./../../../../assets/personal_picture.jpg');
}

.icon {
    display: inline-block;
    font: 14px/1 FontAwesome;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    color: #fff;
    text-align: center;
    padding: 10px;
    border-radius: 50%;
    transition: all .5s;
    margin: 5px;
    border: 2px solid #fff;
    font-size: 30px;
    line-height: 30px;
}
.icon:hover {
    transform: translateY(-0.3rem);
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.21); 
}

.down {
    font-family: 'Antic Slab',serif;
    font-weight: 400;
    -webkit-font-smoothing: antialiased;
    background-color: transparent;
    color: #fff;
    text-align: center;
    position: absolute;
    bottom: 25px;
    width: 100%;
    margin: 0 auto;
    display: block;
    font-size: 30px;
    line-height: 30px;
    cursor: pointer;
    border: none!important;
}
@keyframes pulse_animation {
    0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
    40% {transform: translateY(-20px);} 
    60% {transform: translateY(-10px);} 
}
.fa-chevron-down {
    color: #fff;
    text-align: center;
    cursor: pointer;
    display: inline-block;
    font: 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    transform-style: preserve-3d;
    animation-name: pulse_animation;
    animation-duration: 3000ms;
    transform-origin:70% 70%;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

